<resources>
    <string name="app_name">RecipeApp</string>

    <!-- food -->
    <string name="top_text">Recipe Categories</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="recipe_header">Category:    </string>
    <string name="error_text">No data to display</string>
    <string name="category">Category:</string>
    <string name="country">Country:</string>

    <!-- bar -->
    <string name="bar_top_text">Categories</string>


    <!--auth-->
    <string name="registration">Registration</string>
    <string name="login">Log In</string>
    <string name="hint_email">Email address</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="redirect_to_login">Have an account? <u> Log In </u></string>
    <string name="redirect_to_sign_up">New to RecipeApp? <u> Create an account </u></string>

    <!--main menu-->
    <string name="menu_header">MENU</string>
    <string name="menu_food">Food Recipes</string>
    <string name="menu_bar">Cocktail Recipes</string>
    <string name="menu_profile">Profile</string>
    <string name="footer_text">© 2020 RecipeApp</string>

    <!-- profile page -->
    <string name="profile_header">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>